--- a/lab assignment 2/lab assignment 2/lab assignment 2.csproj
+++ b/lab assignment 2/lab assignment 2/lab assignment 2.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>lab_assignment_2.ascii</StartupObject>
+    <StartupObject>lab_assignment_2.StringToInteger</StartupObject>
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
@@ -50,6 +50,7 @@
     <Compile Include="ascii.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringToInteger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
